--- a/api/wrangler.jsonc
+++ b/api/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "cfworkers",
+	"name": "api",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-03-27",
 	"observability": {
@@ -22,12 +22,7 @@
 	 * databases, object storage, AI inference, real-time communication and more.
 	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
 	 */
-	"r2_buckets": [
-		{
-			"binding": "BUCKET_ATTUNE",
-			"bucket_name": "apt-releases-attunehq-com"
-		}
-	]
+	"r2_buckets": [{ "binding": "BUCKET_ATTUNE", "bucket_name": "apt-releases-attunehq-com" }]
 
 	/**
 	 * Environment Variables
