--- a/controlplane/Cargo.toml
+++ b/controlplane/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2024"
 
 [dependencies]
 aws-sdk-s3 = "1.82.0"
-axum = { version = "0.8.3", features = ["macros"] }
+axum = { version = "0.8.3", features = ["macros", "multipart"] }
 clap = { version = "4.5.35", features = ["derive"] }
+debian-packaging = "0.18.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time"] }
