--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,14 @@ services:
       - "${DB_PORT:-5432}:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+  minio:
+    image: minio/minio:RELEASE.2025-04-08T15-41-24Z-cpuv1
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minio}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-localpassword}
+    volumes:
+      - ./minio-data:/data
+    command: server /data --console-address ":9001"
