--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "cli/cmd/armor",
+      "program": "cli/cmd/attune",
       "args": []
     }
   ]
