--- a/controlplane/Cargo.toml
+++ b/controlplane/Cargo.toml
@@ -19,6 +19,6 @@ sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time"] }
 tabwriter = "1.4.1"
 time = { version = "0.3.41", features = ["formatting", "serde"] }
 tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "tracing"] }
-tower-http = { version = "0.6.2", features = ["trace"] }
+tower-http = { version = "0.6.2", features = ["auth", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
