--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
       - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minio}
       - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-localpassword}
+      - MINIO_DOMAIN=${MINIO_DOMAIN:-localhost:9000}
     volumes:
       - ./minio-data:/data
     command: server /data --console-address ":9001"
