doc: Add README and user guide

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # These are the environment variables used by the control plane.
 ATTUNE_DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 ATTUNE_SECRET= # Generate using `openssl rand -hex32`
+ATTUNE_S3_BUCKET_NAME= # Set to your S3 bucket name
+
 ## Set these to the credentials provided by your S3-compatible object storage:
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
@@ -9,3 +11,4 @@ AWS_ENDPOINT_URL_S3=
 
 # These are the environment variables used by the CLI.
 ATTUNE_API_TOKEN= # Should be the same as ATTUNE_SECRET in the backend
+ATTUNE_API_ENDPOINT= # Should be the base URL of the control plane (e.g. http://localhost:3000).
