refactor: Deploy in Docker

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,22 @@
-# These are the environment variables used by the control plane.
-ATTUNE_DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
-ATTUNE_SECRET= # Generate using `openssl rand -hex32`
-ATTUNE_S3_BUCKET_NAME= # Set to your S3 bucket name
+######## These are the environment variables used by the control plane. ########
 
-## Set these to the credentials provided by your S3-compatible object storage:
-AWS_REGION=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_ENDPOINT_URL_S3=
+ATTUNE_DATABASE_URL=postgres://attune:attune@localhost:5432/attune
+# Generate using `openssl rand -hex 32`.
+ATTUNE_SECRET=ATTUNE_DEV_INSECURE_SECRET_REPLACE_ME
+# Set to your S3 bucket name. This is currently set to our development Minio
+# default.
+ATTUNE_S3_BUCKET_NAME=attune-dev-0
 
-# These are the environment variables used by the CLI.
-ATTUNE_API_TOKEN= # Should be the same as ATTUNE_SECRET in the backend
-ATTUNE_API_ENDPOINT= # Should be the base URL of the control plane (e.g. http://localhost:3000).
+# Set these to the credentials provided by your S3-compatible object storage:
+## These are currently set to our development Minio defaults.
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=attuneminio
+AWS_SECRET_ACCESS_KEY=attuneminio
+AWS_ENDPOINT_URL_S3=http://localhost:9000
+
+############# These are the environment variables used by the CLI. #############
+
+# Should be the same as ATTUNE_SECRET in the backend.
+ATTUNE_API_TOKEN=ATTUNE_DEV_INSECURE_SECRET_REPLACE_ME
+# Should be the base URL of the control plane.
+ATTUNE_API_ENDPOINT=http://localhost:3000
