--- a/controlplane/Cargo.toml
+++ b/controlplane/Cargo.toml
@@ -18,7 +18,7 @@ sha2 = "0.10.8"
 sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time"] }
 tabwriter = "1.4.1"
 time = { version = "0.3.41", features = ["formatting", "serde"] }
-tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "tracing"] }
+tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
 tower-http = { version = "0.6.2", features = ["auth", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
