feat: Add cloud hosting compatibility

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ ATTUNE_SECRET=ATTUNE_DEV_INSECURE_SECRET_REPLACE_ME
 # Set to your S3 bucket name. This is currently set to our development Minio
 # default.
 ATTUNE_S3_BUCKET_NAME=attune-dev-0
+# Set to either 'single' or 'multi'.
+ATTUNE_TENANT_MODE=single
 
 # Set these to the credentials provided by your S3-compatible object storage:
 ## These are currently set to our development Minio defaults.
