--- a/controlplane/Cargo.toml
+++ b/controlplane/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "attune-controlplane"
+name = "attune_controlplane"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+aerosol = { version = "1.1.0", features = ["axum"] }
 aws-config = "1.6.1"
 aws-sdk-s3 = "1.82.0"
 axum = { version = "0.8.3", features = ["macros", "multipart"] }
@@ -15,7 +16,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
-sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time"] }
+sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time", "tls-native-tls"] }
 tabwriter = "1.4.1"
 time = { version = "0.3.41", features = ["formatting", "serde"] }
 tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
