doc: Update env vars example

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,9 @@
 ######## These are the environment variables used by the control plane. ########
 
 ATTUNE_DATABASE_URL=postgres://attune:attune@localhost:5432/attune
-# Generate using `openssl rand -hex 32`.
-ATTUNE_SECRET=ATTUNE_DEV_INSECURE_SECRET_REPLACE_ME
 # Set to your S3 bucket name. This is currently set to our development Minio
 # default.
 ATTUNE_S3_BUCKET_NAME=attune-dev-0
-# Set to either 'single' or 'multi'.
-ATTUNE_TENANT_MODE=single
 
 # Set these to the credentials provided by your S3-compatible object storage:
 ## These are currently set to our development Minio defaults.
@@ -18,7 +14,7 @@ AWS_ENDPOINT_URL_S3=http://localhost:9000
 
 ############# These are the environment variables used by the CLI. #############
 
-# Should be the same as ATTUNE_SECRET in the backend.
-ATTUNE_API_TOKEN=ATTUNE_DEV_INSECURE_SECRET_REPLACE_ME
+# You'll need to provision an API token using `attunectl`.
+ATTUNE_API_TOKEN=
 # Should be the base URL of the control plane.
 ATTUNE_API_ENDPOINT=http://localhost:3000
