--- a/controlplane/Cargo.toml
+++ b/controlplane/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.5.35", features = ["derive"] }
 debian-packaging = "0.18.0"
 hex = "0.4.3"
 md-5 = "0.10.6"
+percent-encoding = "2.3.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sha1 = "0.10.6"
