feat: Initialize single tenant on boot

--- a/docker/postgres/package.json
+++ b/docker/postgres/package.json
@@ -6,7 +6,10 @@
     "prisma": "^6.10.1"
   },
   "scripts": {
-    "schema:diff": "prisma migrate diff --from-schema-datasource=./prisma/schema.prisma --to-schema-datamodel=./prisma/schema.prisma"
+    "migrate:new": "prisma migrate dev",
+    "migrate": "prisma migrate deploy",
+    "reset": "prisma migrate reset",
+    "diff": "prisma migrate diff --from-schema-datasource=./prisma/schema.prisma --to-schema-datamodel=./prisma/schema.prisma"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1"
