doc: Update env vars example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-######## These are the environment variables used by the control plane. ########
+#### These are the environment variables used by both the control plane and the
+#### CLI.
 
+# Generate using `openssl rand -hex 32`.
+ATTUNE_API_TOKEN=INSECURE_TEST_TOKEN
+
+#### These are the environment variables used by the control plane.
+
+# Set to your Postgres database URL. This is currently set to our development
+# Docker Compose default.
 ATTUNE_DATABASE_URL=postgres://attune:attune@localhost:5432/attune
 # Set to your S3 bucket name. This is currently set to our development Minio
 # default.
@@ -12,9 +20,7 @@ AWS_ACCESS_KEY_ID=attuneminio
 AWS_SECRET_ACCESS_KEY=attuneminio
 AWS_ENDPOINT_URL_S3=http://localhost:9000
 
-############# These are the environment variables used by the CLI. #############
+#### These are the environment variables used by the CLI.
 
-# You'll need to provision an API token using `attunectl`.
-ATTUNE_API_TOKEN=
 # Should be the base URL of the control plane.
 ATTUNE_API_ENDPOINT=http://localhost:3000
