--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,4 @@
-name: Deploy Docs to GitHub Pages
+name: Deploy docs to GitHub Pages on merging PR
 
 on:
   push:
@@ -23,8 +23,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: docs
       - name: Build website
         run: npm run build
+        working-directory: docs
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
