--- a/.github/workflows/test-deploy-docs.yml
+++ b/.github/workflows/test-deploy-docs.yml
@@ -1,4 +1,4 @@
-name: Test deployment
+name: Test docs deployment on opening PR
 
 on:
   pull_request:
@@ -23,5 +23,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: docs
       - name: Test build website
         run: npm run build
+        working-directory: docs
