--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - docs/** # Only trigger when changes are made to docs directory.
+      - docs/site/** # Only trigger when changes are made to docs directory.
 
 jobs:
   build:
@@ -19,19 +19,19 @@ jobs:
         with:
           node-version: 18
           cache: npm
-          cache-dependency-path: docs/package-lock.json
+          cache-dependency-path: docs/site/package-lock.json
 
       - name: Install dependencies
         run: npm ci
-        working-directory: docs
+        working-directory: docs/site
       - name: Build website
         run: npm run build
-        working-directory: docs
+        working-directory: docs/site
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/build
+          path: docs/site/build
 
   deploy:
     name: Deploy to GitHub Pages
