--- a/.github/workflows/test-deploy-docs.yml
+++ b/.github/workflows/test-deploy-docs.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - docs/** # Only trigger when changes are made to docs directory.
+      - docs/site/** # Only trigger when changes are made to docs directory.
 
 jobs:
   test-deploy:
@@ -19,11 +19,11 @@ jobs:
         with:
           node-version: 18
           cache: npm
-          cache-dependency-path: docs/package-lock.json 
+          cache-dependency-path: docs/site/package-lock.json 
 
       - name: Install dependencies
         run: npm ci
-        working-directory: docs
+        working-directory: docs/site
       - name: Test build website
         run: npm run build
-        working-directory: docs
+        working-directory: docs/site
