--- a/docker/attune/Dockerfile
+++ b/docker/attune/Dockerfile
@@ -1,11 +1,13 @@
 FROM rust:1.86.0-bookworm AS build
 
 COPY Cargo.toml Cargo.lock ./
-RUN mkdir src && echo 'fn main() { println!("Placeholder build target")}' > ./src/main.rs
+COPY ./packages/attune/Cargo.toml ./packages/attune/Cargo.toml
+RUN mkdir -p packages/attune/src && \
+    echo 'fn main() { println!("Placeholder build target")}' > ./packages/attune/src/main.rs
 RUN cargo build --release
 COPY ./.sqlx ./.sqlx
-COPY ./src ./src
-RUN touch ./src/main.rs && cargo build --release
+COPY ./packages ./packages
+RUN cargo build --release
 
 FROM debian:bookworm-slim AS runtime
 
@@ -16,5 +18,5 @@ COPY --from=build /target/release/attune-server /usr/local/bin/attune-server
 
 USER 1000:1000
 
-ENV RUST_LOG=attune_server=debug,attune_controlplane=debug
+ENV RUST_LOG=attune_server=debug,attune=debug
 ENTRYPOINT ["attune-server"]
