--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,6 @@
 # Workflows that run on pull requests. These are primarily CI checks for
 # linting, formatting, testing, etc.
-name: Pull request checks
+name: PR
 
 on:
   pull_request:
@@ -15,7 +15,7 @@ on:
 
 jobs:
   ci:
-    name: CI checks
+    name: Build, check, and test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -33,6 +33,12 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
+
+      - name: Remove empty EE crate
+        run: rm -r ./packages/attune-ee
+
+      - name: Run build
+        run: cargo build --all-targets --all-features
 
       - name: Check format
         run: cargo fmt --all --check
