--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,6 +13,9 @@ on:
       - '**/.gitignore'
       - '**/LICENSE'
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   ci:
     name: Build, check, and test
@@ -37,17 +40,17 @@ jobs:
       - name: Remove empty EE crate
         run: rm -r ./packages/attune-ee
 
-      - name: Run build
-        run: cargo build --all-targets --all-features
-
       - name: Check format
         run: cargo fmt --all --check
 
       - name: Check build
-        run: cargo check --all-targets --all-features
+        run: cargo check --workspace --all-targets --all-features
 
       - name: Check clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
 
       - name: Run tests
-        run: cargo test --all-features
+        run: cargo test --workspace --all-targets --all-features
+
+      - name: Run full build
+        run: cargo build --workspace --all-targets --all-features
