--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-    "ignoreCommand": "git diff --quiet HEAD^ HEAD ./docs/site/"
+    "ignoreCommand": "git diff --quiet HEAD^ HEAD -- ./docs/site/"
 }
