--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -40,6 +40,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-
 
+      - name: Remove empty EE crate
+        run: rm -r ./packages/attune-ee
+
       - name: Build binaries
         run: cargo build --workspace --all-targets --all-features --release
 
