ci: Fix permissions issue pt. 4?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,5 +91,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: attune-${{ runner.os }}_${{ runner.arch }}_${{ github.sha }}
-          path: target/release/{attune, attune-server}
+          path: |
+            target/release/attune-server
           if-no-files-found: error
