--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ futures-util = "0.3.31"
 hex = "0.4.3"
 inquire = "0.7.5"
 md-5 = "0.10.6"
-reqwest = "0.12.22"
+reqwest = { version = "0.12.22", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sha1 = "0.10.6"
@@ -27,7 +27,7 @@ tabled = "0.20.0"
 tabwriter = "1.4.1"
 time = { version = "0.3.41", features = ["formatting", "serde"] }
 tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
-tower-http = { version = "0.6.2", features = ["auth", "trace"] }
+tower-http = { version = "0.6.2", features = ["auth", "catch-panic", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 url = "2.5.4"
