--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ tower-http = { version = "0.6.2", features = ["auth", "catch-panic", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 url = "2.5.4"
+uuid = { version = "1.17.0", features = ["v4"] }
