--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -23,3 +23,4 @@ tokio.workspace = true
 tower-http.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+uuid.workspace = true
