wip: version check, repo create, repo list

--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 aws-config.workspace = true
 aws-sdk-s3.workspace = true
 axum.workspace = true
+chrono = "0.4.41"
 clap.workspace = true
 debian-packaging.workspace = true
 hex.workspace = true
@@ -17,6 +18,7 @@ serde_json.workspace = true
 sha1.workspace = true
 sha2.workspace = true
 sqlx.workspace = true
+tabled.workspace = true
 tabwriter.workspace = true
 time.workspace = true
 tokio.workspace = true
