--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2024"
 aws-config.workspace = true
 aws-sdk-s3.workspace = true
 axum.workspace = true
-chrono = "0.4.41"
+chrono.workspace = true
 clap.workspace = true
 debian-packaging.workspace = true
 hex.workspace = true
 md-5.workspace = true
+percent-encoding.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
