--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -8,9 +8,11 @@ aws-config.workspace = true
 aws-sdk-s3.workspace = true
 axum.workspace = true
 chrono.workspace = true
+colored.workspace = true
 clap.workspace = true
 debian-packaging.workspace = true
 hex.workspace = true
+inquire.workspace = true
 md-5.workspace = true
 percent-encoding.workspace = true
 reqwest.workspace = true
