--- a/docker/migrate/package.json
+++ b/docker/migrate/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
+    "@types/node": "^24.1.0",
     "prisma": "^6.10.1"
   },
   "scripts": {
-    "migrate:new": "prisma migrate dev",
     "migrate": "prisma migrate deploy",
+    "migrate:new": "prisma migrate dev",
+    "migrate:rds": "node ./src/migrate_rds.ts",
     "reset": "prisma migrate reset",
     "diff": "prisma migrate diff --from-schema-datasource=./prisma/schema.prisma --to-schema-datamodel=./prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "^6.10.1"
+    "@aws-sdk/rds-signer": "^3.848.0",
+    "@prisma/client": "^6.10.1",
+    "pg-connection-string": "^2.9.1"
   }
 }
