wip: Adding packages

--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2024"
 aws-config.workspace = true
 aws-sdk-s3.workspace = true
 axum.workspace = true
+bytes.workspace = true
 chrono.workspace = true
 colored.workspace = true
 clap.workspace = true
 debian-packaging.workspace = true
+digest.workspace = true
 hex.workspace = true
 inquire.workspace = true
 md-5.workspace = true
