--- a/docker/migrate/Dockerfile
+++ b/docker/migrate/Dockerfile
@@ -4,3 +4,5 @@ WORKDIR /app
 COPY ./package.json ./package-lock.json ./
 RUN npm install
 COPY ./prisma ./
+
+ENTRYPOINT ["npm", "run", "migrate:authauth", "--silent"]
