--- a/docker/migrate/Dockerfile
+++ b/docker/migrate/Dockerfile
@@ -3,6 +3,6 @@ FROM node:24-bookworm
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./
 RUN npm install
-COPY ./prisma ./
+COPY . .
 
-ENTRYPOINT ["npm", "run", "migrate:authauth", "--silent"]
+ENTRYPOINT ["npm", "run", "migrate:autoauth", "--silent"]
