--- a/docker/migrate/package.json
+++ b/docker/migrate/package.json
@@ -9,14 +9,13 @@
   "scripts": {
     "migrate": "prisma migrate deploy",
     "migrate:new": "prisma migrate dev",
-    "migrate:authauth": "node --disable-warning=ExperimentalWarning ./src/main.ts",
+    "migrate:autoauth": "node --disable-warning=ExperimentalWarning ./src/main.ts",
     "reset": "prisma migrate reset",
     "diff": "prisma migrate diff --from-schema-datasource=./prisma/schema.prisma --to-schema-datamodel=./prisma/schema.prisma"
   },
   "dependencies": {
     "@aws-sdk/rds-signer": "^3.848.0",
-    "@prisma/client": "^6.10.1",
-    "pg-connection-string": "^2.9.1"
+    "@prisma/client": "^6.10.1"
   },
   "type": "module"
 }
