--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,15 +27,10 @@ jobs:
         run: rustup show
 
       - name: Cache cargo
-        uses: actions/cache@v4
+        uses: Swatinem/rust-cache@v2
         with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
+          cache-workspace-crates: true
+          cache-all-crates: true
 
       - name: Remove empty EE crate
         run: rm -r ./packages/attune-ee
