--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ colored = "3.0.0"
 debian-packaging = "0.18.0"
 digest = "0.10.7"
 futures-util = "0.3.31"
+gpgme = "0.11.0"
 hex = "0.4.3"
 inquire = "0.7.5"
 md-5 = "0.10.6"
