--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,19 +34,14 @@ jobs:
       - name: Install Rust
         run: rustup show
 
-      - name: Cache cargo
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-
       - name: Remove empty EE crate
         run: rm -r ./packages/attune-ee
+
+      - name: Cache cargo
+        uses: Swatinem/rust-cache@v2.8.0
+        with:
+          cache-workspace-crates: true
+          cache-all-crates: true
 
       - name: Run tests
         run: cargo test --workspace --all-targets --all-features --release
