--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -22,3 +22,6 @@ tokio = { workspace = true }
 tower-http = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+[dev-dependencies]
+xshell = "0.2.7"
