--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ aws-credential-types = "1.2.3"
 aws-sdk-s3 = "1.82.0"
 aws-sigv4 = "1.3.3"
 axum = { version = "0.8.3", features = ["macros", "multipart"] }
+base64 = "0.22.1"
 bytes = "1.10.1"
 chrono = "0.4.41"
 clap = { version = "4.5.35", features = ["derive", "env", "wrap_help"] }
@@ -22,6 +23,7 @@ hex = "0.4.3"
 inquire = "0.7.5"
 md-5 = "0.10.6"
 percent-encoding = "2.3.1"
+pgp = "0.16.0"
 reqwest = { version = "0.12.22", features = ["json", "multipart"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
