--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 aws-config.workspace = true
 aws-sdk-s3.workspace = true
 axum.workspace = true
+base64.workspace = true
 bytes.workspace = true
 chrono.workspace = true
 colored.workspace = true
@@ -18,6 +19,7 @@ hex.workspace = true
 inquire.workspace = true
 md-5.workspace = true
 percent-encoding.workspace = true
+pgp.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
