Add error handlers (#67)

--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -16,6 +16,7 @@ debian-packaging.workspace = true
 digest.workspace = true
 gpgme.workspace = true
 hex.workspace = true
+http.workspace = true
 inquire.workspace = true
 md-5.workspace = true
 percent-encoding.workspace = true
@@ -30,6 +31,7 @@ tabled.workspace = true
 tabwriter.workspace = true
 time.workspace = true
 tokio.workspace = true
+tower.workspace = true
 tower-http.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
