--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ digest = "0.10.7"
 futures-util = "0.3.31"
 gpgme = "0.11.0"
 hex = "0.4.3"
+http = "1.3.1"
 inquire = "0.7.5"
 md-5 = "0.10.6"
 percent-encoding = "2.3.1"
@@ -34,6 +35,7 @@ tabled = "0.20.0"
 tabwriter = "1.4.1"
 time = { version = "0.3.41", features = ["formatting", "serde"] }
 tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
+tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["auth", "catch-panic", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
