--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -8,6 +8,7 @@ aws-config.workspace = true
 aws-sdk-s3.workspace = true
 axum.workspace = true
 base64.workspace = true
+bon.workspace = true
 bytes.workspace = true
 chrono.workspace = true
 colored.workspace = true
@@ -29,6 +30,7 @@ sha2.workspace = true
 sqlx.workspace = true
 tabled.workspace = true
 tabwriter.workspace = true
+tap.workspace = true
 time.workspace = true
 tokio.workspace = true
 tower.workspace = true
