--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ aws-sdk-s3 = "1.82.0"
 aws-sigv4 = "1.3.3"
 axum = { version = "0.8.3", features = ["macros", "multipart"] }
 base64 = "0.22.1"
+bon = "3.6.5"
 bytes = "1.10.1"
 chrono = "0.4.41"
 clap = { version = "4.5.35", features = ["derive", "env", "wrap_help"] }
@@ -33,6 +34,7 @@ sha2 = "0.10.8"
 sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time", "tls-native-tls"] }
 tabled = "0.20.0"
 tabwriter = "1.4.1"
+tap = "1.0.1"
 time = { version = "0.3.41", features = ["formatting", "serde"] }
 tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
 tower = "0.5.2"
