Streamlined CLI commands (#62)
* wip: Hello, world!

* wip: Command layout

* wip: Subcommand layout

* wip: Figuring a bunch of stuff out

* wip

* wip: repo create

* wip: version check, repo create, repo list

* wip: repo edit

* wip: repo rm

* wip: direct package add design

* feat: Polish update notifier

* wip: Adding packages

* wip: Package file upload

* wip: oh jesus what a mess

* wip: at least it compiles now

* wip: generate index

* wip: shelling out to gpg

* wip: signing via gpgme

* wip: working on signature submission

* wip: pkg add

* wip: morning convo

* Add error handlers (#67)

* wip: s3 serialization design

* feat: s3 serialization checks

* fix: sync check with empty bucket

* cr: Formatter

* cr: Clippy

* cr: Formatter again

---------

Co-authored-by: Jessica Black <me@jessica.black>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,5 +87,6 @@ jobs:
         with:
           name: attune-${{ runner.os }}_${{ runner.arch }}_${{ github.sha }}
           path: |
+            target/release/attune
             target/release/attune-server
           if-no-files-found: error
