--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -4,21 +4,35 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-aws-config = { workspace = true }
-aws-sdk-s3 = { workspace = true }
-axum = { workspace = true }
-clap = { workspace = true }
-debian-packaging = { workspace = true }
-hex = { workspace = true }
-md-5 = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-sha1 = { workspace = true }
-sha2 = { workspace = true }
-sqlx = { workspace = true }
-tabwriter = { workspace = true }
-time = { workspace = true }
-tokio = { workspace = true }
-tower-http = { workspace = true }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
+aws-config.workspace = true
+aws-sdk-s3.workspace = true
+axum.workspace = true
+base64.workspace = true
+bytes.workspace = true
+chrono.workspace = true
+colored.workspace = true
+clap.workspace = true
+debian-packaging.workspace = true
+digest.workspace = true
+gpgme.workspace = true
+hex.workspace = true
+http.workspace = true
+inquire.workspace = true
+md-5.workspace = true
+percent-encoding.workspace = true
+pgp.workspace = true
+reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+sha1.workspace = true
+sha2.workspace = true
+sqlx.workspace = true
+tabled.workspace = true
+tabwriter.workspace = true
+time.workspace = true
+tokio.workspace = true
+tower.workspace = true
+tower-http.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+uuid.workspace = true
