--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,50 +17,53 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  ci:
-    name: Build, check, and test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+#   ci:
+#     name: Build, check, and test
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
 
-      - name: Install Rust
-        run: rustup show
+#       - name: Install Rust
+#         run: rustup show
 
-      - name: Cache cargo
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
+#       - name: Cache cargo
+#         uses: actions/cache@v4
+#         with:
+#           path: |
+#             ~/.cargo/registry
+#             ~/.cargo/git
+#             target
+#           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+#           restore-keys: |
+#             ${{ runner.os }}-cargo-
 
-      - name: Remove empty EE crate
-        run: rm -r ./packages/attune-ee
+#       - name: Remove empty EE crate
+#         run: rm -r ./packages/attune-ee
 
-      - name: Check format
-        run: cargo fmt --all --check
+#       - name: Check format
+#         run: cargo fmt --all --check
 
-      - name: Check build
-        run: cargo check --workspace --all-targets --all-features
+#       - name: Check build
+#         run: cargo check --workspace --all-targets --all-features
 
-      - name: Check clippy
-        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
+#       - name: Check clippy
+#         run: cargo clippy --workspace --all-targets --all-features -- -D warnings
 
-      - name: Run tests
-        run: cargo test --workspace --all-targets --all-features -- --skip smoke
+#       - name: Run tests
+#         run: cargo test --workspace --all-targets --all-features -- --skip smoke
 
-      - name: Run full build
-        run: cargo build --workspace --all-targets --all-features
+#       - name: Run full build
+#         run: cargo build --workspace --all-targets --all-features
 
   dev:
     name: Set up Attune locally and run smoke tests
     runs-on: ubuntu-latest
-    needs: ci  # Wait for main CI to pass.
+    # needs: ci  # Wait for main CI to pass.
     steps:
       - uses: actions/checkout@v4
+
+      - name: Remove empty EE crate
+        run: rm -r ./packages/attune-ee
 
       - name: Set up Go
         uses: actions/setup-go@v5
