Rebase to main to test CI changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         run: rm -r ./packages/attune-ee
 
       - name: Run tests
-        run: cargo test --workspace --all-targets --all-features --release
+        run: cargo test --workspace --all-targets --all-features --release -- --skip smoke
 
       # Build binaries.
       - name: Build binaries
