--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -38,6 +38,11 @@ jobs:
           cache-workspace-crates: true
           cache-all-crates: true
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgpg-error-dev libgpgme-dev pkg-config
+
       - name: Build binaries
         run: cargo build --workspace --all-targets --all-features --release
 
