--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,6 +35,11 @@ jobs:
           cache-workspace-crates: true
           cache-all-crates: true
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgpg-error-dev libgpgme-dev pkg-config
+
       - name: Check format
         run: cargo fmt --all --check
 
