- Make changes into their own subcommand - Transpile to JS before executing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,22 @@ services:
     networks:
       - dev
     restart: on-failure
+  migraterds:
+    build:
+      context: ./docker/migrate
+      dockerfile: Dockerfile.rds
+    environment:
+      - ATTUNE_DATABASE_URL=postgres://attune:attune@postgres:5432/attune
+      - ATTUNE_MIGRATION_AUTHENTICATION_METHOD=rds-iam
+    volumes:
+      - ./docker/migrate:/app
+    working_dir: /app
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - dev
+    restart: on-failure
   minio:
     build: ./docker/minio
     ports:
