--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,13 +56,14 @@ services:
   migraterds:
     build:
       context: ./docker/migrate
-      dockerfile: Dockerfile.rds
+      dockerfile: Dockerfile
     environment:
       - ATTUNE_DATABASE_URL=postgres://attune:attune@postgres:5432/attune
       - ATTUNE_MIGRATION_AUTHENTICATION_METHOD=rds-iam
     volumes:
       - ./docker/migrate:/app
     working_dir: /app
+    command: ["npm", "run", "migrate:rds"]
     depends_on:
       postgres:
         condition: service_healthy
