--- a/docker/migrate/tsconfig.json
+++ b/docker/migrate/tsconfig.json
@@ -1,15 +1,14 @@
 {
     "compilerOptions": {
-        "types": [
-            "node"
-        ],
-        "target": "esnext",
-        "module": "esnext",
+        "target": "es2022",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "outDir": "./dist",
         "rootDir": "./src",
-        "moduleResolution": "node",
-        "noEmit": false,
         "strict": true,
-        "forceConsistentCasingInFileNames": true
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "forceConsistentCasingInFileNames": true,
+        "skipLibCheck": true
     }
 }
