--- a/docker/migrate/Dockerfile
+++ b/docker/migrate/Dockerfile
@@ -3,5 +3,7 @@ FROM node:24-bookworm
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./
 RUN npm install
-COPY ./prisma ./
+
+COPY . .
+RUN npm run build
 ENTRYPOINT ["npm", "run", "migrate"]
