Fixup: Add support for AWS IAM authentication for DB migrations (#83)
Co-authored-by: Fred Heinecke <fred.heinecke@goteleport.com>

--- a/docker/migrate/Dockerfile
+++ b/docker/migrate/Dockerfile
@@ -3,5 +3,7 @@ FROM node:24-bookworm
 WORKDIR /app
 COPY ./package.json ./package-lock.json ./
 RUN npm install
-COPY ./prisma ./
-ENTRYPOINT ["npm", "run", "migrate"]
+
+COPY . .
+RUN npm run build
+CMD ["npm", "run", "migrate"]
