--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ aws-sdk-s3 = "1.82.0"
 aws-sigv4 = "1.3.3"
 axum = { version = "0.8.3", features = ["macros", "multipart"] }
 base64 = "0.22.1"
+bon = "3.6.5"
 bytes = "1.10.1"
 chrono = "0.4.41"
 clap = { version = "4.5.35", features = ["derive", "env", "wrap_help"] }
