ci: Clearer workflow names

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ env:
 
 jobs:
   cd:
-    name: Build commit
+    name: Development build of `main`
     runs-on: ubuntu-latest
     permissions:
       contents: read
