--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -75,6 +75,8 @@ jobs:
   db:
     name: Check database migrations
     runs-on: ubuntu-latest
+    env:
+      ATTUNE_DATABASE_URL: postgresql://attune:attune@postgres:5432/attune
     services:
       postgres:
         image: postgres:17.4-bookworm
