--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -37,3 +37,6 @@ tower-http.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 uuid.workspace = true
+
+[dev-dependencies]
+xshell = "0.2.7"
