--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -110,10 +110,39 @@ jobs:
         run: npm run build
         working-directory: ./docker/migrate
 
-  # TODO: Add a job (maybe called `dev`?) that spins up the Docker Compose local
-  # development environment and runs some smoke tests (maybe ideally this would
-  # be an integration testing job?) to make sure we didn't break it.
+  dev:
+    name: Set up Attune locally and run smoke tests
+    runs-on: ubuntu-latest
+    needs: ci  # Wait for main CI to pass.
+    steps:
+      - uses: actions/checkout@v4
 
-  # TODO: Add a job (maybe called `setup` or `onboarding`?) that literally
-  # performs the onboarding/setup/quickstart instructions we've documented to
-  # make sure they actually work as expected.
+      - name: Install Rust
+        run: rustup show
+
+      - name: Remove empty EE crate
+        run: rm -r ./packages/attune-ee
+
+      - name: Set up environment
+        run: cp .env.example .env
+
+      - name: Start services
+        run: |
+          docker compose up -d
+          # Wait for services to be healthy
+          timeout 300 bash -c 'until docker compose ps | grep -q "healthy"; do sleep 5; done'
+
+      - name: Build CLI
+        run: |
+          cargo build --release --bin attune
+
+      - name: Run smoke tests
+        env:
+          ATTUNE_CLI_PATH: ${{ github.workspace }}/target/release/attune
+          ATTUNE_API_ENDPOINT: http://localhost:3000
+          ATTUNE_API_TOKEN: INSECURE_TEST_TOKEN
+        run: cargo test --test smoke
+
+      - name: Stop services
+        if: always()
+        run: docker compose down
