Add repo clean up functions at the end so tests can be run as many times as needed without resetting services

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -67,7 +67,7 @@ jobs:
         run: cargo clippy --workspace --all-targets --all-features -- -D warnings
 
       - name: Run tests
-        run: cargo test --workspace --all-targets --all-features
+        run: cargo test --workspace --all-targets --all-features -- --skip smoke
 
       - name: Run full build
         run: cargo build --workspace --all-targets --all-features
